--- a/templates/adminpages/adminimportproduct.html
+++ b/templates/adminpages/adminimportproduct.html
@@ -52,7 +52,7 @@
                 <a href = "{% url 'ecomapp:adminimportingrecordlist' %}">Xem Danh Sách Hoá Đơn</a>
             </div>
             <div class="card-body">
-              <form autocomplete="off" class="form" id="formLogin" name="formLogin" role="form" enctype="multipart/form-data">
+              <form action="" method="POST" autocomplete="off" class="form" id="formLogin" name="formLogin" role="form" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{form.as_p}}
                 <button class="btn btn-primary btn-addcart btn-lg float-right" >Submit Data</button>
