--- a/templates/adminpages/adminproductcreate.html
+++ b/templates/adminpages/adminproductcreate.html
@@ -50,7 +50,7 @@
                     All New <span>Products</span></h3>
             </div>
             <div class="card-body">
-              <form autocomplete="off" class="form" id="formLogin" name="formLogin" role="form" enctype="multipart/form-data">
+              <form action="" method="POST" autocomplete="off" class="form" id="formLogin" name="formLogin" role="form" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{form.as_p}}
                 <button class="btn btn-primary btn-addcart btn-lg float-right" >Submit Data</button>
